--- a/index.html
+++ b/index.html
@@ -44,7 +44,33 @@
     </header>
 
     <main>
-      
+      <section class="s-hero">
+        <div class="container">
+          <div class="title">
+            <h1>Olá!👋🏻 <br />Eu sou <span>Gabriel Santos</span></h1>
+            <h2>Desenvolvedor Fullstack com especialidade em back-end</h2>
+            <p>
+              Meu objetivo é fazer com que o seu seja alcançado. Realizo sonhos através de códigos.
+            </p>
+
+            <div class="techs">
+              <a href="">
+                <img src="./assets/img/html.svg" alt="Linguagem HTML" />
+              </a>
+              <a href="">
+                <img src="./assets/img/css.svg" alt="Linguagem CSS" />
+              </a>
+              <a href="">
+                <img src="./assets/img/javascript.svg" alt="Linguagem Javascript" />
+              </a>
+              <a href="">
+                <img src="./assets/img/php.svg" width="64" height="64" alt="Linguagem PHP" />
+              </a>
+            </div>
+            <a href="" class="btn-primary empty">Veja meus cases</a>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
