--- a/index.html
+++ b/index.html
@@ -71,6 +71,52 @@
           </div>
         </div>
       </section>
+
+      <section class="s-success">
+        <div class="container">
+          <div class="title-success">
+            <span class="tag">#cheeegajunto🔥</span>
+            <h2><span>Sucesso</span><br />Tem <br />Nome</h2>
+          </div>
+          <div class="cards">
+            <div class="card active">
+              <div class="card-title">
+                <h3>+25</h3>
+              </div>
+              <div class="card-info">
+                <p>
+                  Clientes <br />
+                  <strong>Atendidos</strong>
+                </p>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-title">
+                <h3>+250</h3>
+              </div>
+              <div class="card-info">
+                <p>
+                  Páginas <br />
+                  <strong>Desenvolvidas</strong>
+                </p>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-title">
+                <h3>100%</h3>
+              </div>
+              <div class="card-info">
+                <p>
+                  De entregas <br />
+                  <strong>no prazo</strong>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>      
     </main>
 
     <footer>
