Updated index.html, added about section.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,39 @@
             </div>
           </div>
         </div>
-      </section>      
+      </section>
+      
+      <section id="about" class="s-about">
+        <div class="container">
+          <div class="about-me">
+            <h2>QUEM SOU<span>.</span></h2>
+            <p>
+              Sou Gabriel Santos, 25 anos, comecei com programação aos 10 anos de idade e desde então é minha paixão. Comecei pela programação Web mas fui desde o assembly ao C, do vanilla JS ao nodejs e além!
+              Sou desenvolvedor Fullstack com especialização no back-end, utilizo principalmente a linguagem PHP e frameworks como Laravel e CodeIgniter para realizar meus trabalhos.
+            </p>
+            <ul>
+              <li>
+                <a href="">
+                  <img src="./assets/img/icon-linkedin.svg" alt="Meu Linkedin"/>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./assets/img/icon-instagram.svg" alt="Meu Instagram" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./assets/img/icon-github.svg" alt="Meu GitHub"/>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="my-picture">
+            <img src="./assets/img/picture.jpg" alt="Foto de Perfil" />
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
