Fix hero section misalignment.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <section class="s-hero">
         <div class="container">
           <div class="title">
-            <h1>Olá!👋🏻 <br />Eu sou <span>Gabriel Santos</span></h1>
+            <h1>Olá!👋🏻 Eu sou <br /><span>Gabriel Santos</span></h1>
             <h2>Desenvolvedor Fullstack com especialidade em back-end</h2>
             <p>
               Meu objetivo é fazer com que o seu seja alcançado. Realizo sonhos através de códigos.
